# srtcam

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml  flake.nix
src/: backoff.rs  config.rs  dummy.rs  live.rs  live_event.rs  live_ffmpeg_next.rs  main.rs  output.rs
