[package]
name = "rstcam"
version = "0.1.0"
edition = "2021"
description = "SRT listener to v4l2loopback bridge with dummy fallback"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
crossbeam-channel = "0.5"
ctrlc = "3"
v4l = "0.14"
ffmpeg-next = { version = "8" }
